-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
6.2
-
None
-
-
2025wk34s2QtforAndroid
When building qtdeclarative with " -android-abis armeabi-v7a" and " -developer-build", it fails, because there are signed/unsigned comparison warnings which are treated as errors.
Currently, my workaround is to pass "-no-warnings-are-errors" to "configure".
Build commands:
git clone git://code.qt.io/qt/qt5.git cd qt5 perl init-repository --module-subset=qtbase,qtdeclarative,qtandroidextras,qtconnectivity,qtsvg --codereview-username andreasbuhr git submodule foreach git checkout dev git submodule foreach git pull cd .. mkdir hostbuild cd hostbuild ../qt5/configure -developer-build -opensource -make examples -make tests -confirm-license cmake --build . cd .. mkdir androidbuild cd androidbuild ../qt5/configure -developer-build -opensource -nomake examples -nomake tests -confirm-license -xplatform android-clang -qt-host-path /home/andreasbuhr/development/qtdev/androidbuild2/hostbuild/qtbase -android-ndk ~/Android/Sdk/ndk/21.3.6528147 -android-sdk ~/Android/Sdk -android-abis armeabi-v7a cmake --build .
One of the errors:
/home/andreasbuhr/development/qtdev/androidbuild2/qt5/qtbase/src/gui/util/qktxhandler.cpp:151:42: error: comparison of integers of different signs: 'unsigned int' and 'qsizetype' (aka 'int') [-Werror,-Wsign-compare]
if (headerSize + bytesOfKeyValueData < buf.length()) // oob check
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~
/home/andreasbuhr/development/qtdev/androidbuild2/qt5/qtbase/src/gui/util/qktxhandler.cpp:230:42: error: comparison of integers of different signs: 'unsigned int' and 'qsizetype' (aka 'int') [-Werror,-Wsign-compare]
if (offset + keyAndValueByteSize > view.size())
| For Gerrit Dashboard: QTBUG-91163 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 335103,10 | Coin: Add -developer-build targets for Android on Linux | dev | qt/qt5 | Status: ABANDONED | -1 | 0 |
| 374641,7 | Fix warnings when which are treated as errors with -developer-build | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 374794,2 | Fix warnings on Android with developer-build | 6.2 | qt/qtcoap | Status: MERGED | +2 | 0 |
| 374797,2 | Fix warnings on Android with developer-build | 6.2 | qt/qtremoteobjects | Status: MERGED | +2 | 0 |
| 374806,3 | Fix warnings when which are treated as errors with -developer-build | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 374846,4 | Fix warnings on Android with developer-build | dev | qt/qtcoap | Status: MERGED | +2 | 0 |
| 374847,3 | Fix warnings on Android with developer-build | dev | qt/qtopcua | Status: MERGED | +2 | 0 |
| 374848,1 | Fix warnings on Android with developer-build | dev | qt/qtquick3d | Status: ABANDONED | 0 | 0 |
| 374854,5 | Fix warnings on Android with developer-build | dev | qt/qtremoteobjects | Status: MERGED | +2 | 0 |
| 374863,2 | Add comments to use qsizetype for some APIs in Qt 7 | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 375213,2 | Fix warnings on Android with developer-build | 6.2 | qt/qtopcua | Status: ABANDONED | -1 | 0 |
| 379325,2 | Avoid -Wignored-attributes warning with clang | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 381963,3 | Fix quint32 to qsizetype comparison warning | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
| 407162,7 | Fix quint32 to qsizetype comparison warning | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 409590,1 | Fix quint32 to qsizetype comparison warning | 6.3 | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |
| 409691,1 | Fix quint32 to qsizetype comparison warning | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: ABANDONED | +2 | 0 |