Fix warnings on Android with developer-build

The current code can throw the error:

 comparison of integers of different signs:
     'quint32' (aka 'unsigned int') and
     'qsizetype' (aka 'int') [-Werror,-Wsign-compare]

Pick-to: 6.2
Task-number: QTBUG-91163
Change-Id: I171833f057d6216a9212c48589ce11f1eb428027
Reviewed-by: Sona Kurazyan <sona.kurazyan@qt.io>
Reviewed-by: Brett Stottlemyer <bstottle@ford.com>